kubernetes/apollo/apps/default/home-assistant/tailscale/ingress.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-tailscale
  labels:
    tailscale.com/proxy-class: tailscale-ingress
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: home-assistant
      port:
        name: http
  tls:
    - hosts:
        - ha
